force-app/main/default/objects/CLM_LocationOfLoss__c/CLM_LocationOfLoss__c.object-meta.xml
<CustomObject>
    <label>Location of Loss</label>
    <nameField>
        <displayFormat>Loc-{0000}</displayFormat>
        <label>Location of Loss Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Locations of Loss</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>