force-app/main/default/objects/CLM_LocationOfLoss__c/fields/LocationOfLoss__c.field-meta.xml
<CustomField>
    <fullName>LocationOfLoss__c</fullName>
    <label>Location of Loss</label>
    <type>Address</type>
</CustomField>