force-app/main/default/objects/CLM_LocationOfLoss__c/fields/ParentClaim_md__c.field-meta.xml
<CustomField>
    <fullName>ParentClaim_md__c</fullName>
    <label>Parent Claim</label>
    <referenceTo>Claim</referenceTo>
    <relationshipLabel>Locations of Loss</relationshipLabel>
    <relationshipName>LocationsOfLossByParentClaim</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>