force-app/main/default/objects/CLM_LocationOfLoss__c/fields/TSIbyLocation_lk__c.field-meta.xml
<CustomField>
    <fullName>TSIbyLocation_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TSI by Location</label>
    <referenceTo>OPP_TSIByLocation__c</referenceTo>
    <relationshipLabel>Locations of Loss</relationshipLabel>
    <relationshipName>ClaimLocationOfLosses</relationshipName>
    <type>Lookup</type>
</CustomField>